Updated Resume Fixed a few bugs Filled in some missing gaps

--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -5,6 +5,16 @@
   margin-bottom: 40px;
 }
 
+h2 {
+  a {
+    i {
+      color: #4c8080;
+      font-size: 16px;
+      margin-left: -5px;
+    }
+  }
+}
+
 
 :host ::ng-deep h4 {
   font-size: 16px;
